# helloc

./: .gitignore  CMakeLists.txt  build.sh
.github/workflows/: cmake-single-platform.yml  devops.yml
devops/fedora/: helloc.spec
